@@ -122,6 +122,17 @@ Specify which interface to listen to. Without this option,
 .Nm
 will listen on all available interfaces. This option can use
 wildcards. Several interfaces can be specified separated by commas.
+It is also possible to blacklist an interface by suffixing it with an
+exclamation mark. When an interface is both specified with and without
+an exclamation mark, it is blacklisted. For example, with
+.Em eth*,!eth1,!eth2
+.Nm
+will only listen to interfaces starting by
+.Em eth
+with the exception of
+.Em eth1
+and
+.Em eth2 .
 .It Fl M Ar class
 Enable emission of LLDP-MED frame. The class should be one of the
 following value:
